@@ -28,6 +28,8 @@ import java.io.OutputStream;
 import java.io.Reader;
 import java.io.UnsupportedEncodingException;
 import java.io.Writer;
+import java.nio.MappedByteBuffer;
+import java.nio.channels.FileChannel;
 
 import com.badlogic.gdx.Files.FileType;
 import com.badlogic.gdx.Gdx;
@@ -215,6 +217,10 @@ public class GwtFileHandle extends FileHandle {
 			}
 		}
 		return position - offset;
+	}
+
+	public MappedByteBuffer map (FileChannel.MapMode mode) {
+		throw new GdxRuntimeException("Cannot map files in GWT backend");
 	}
 
 	/** Returns a stream for writing to this file. Parent directories will be created if necessary.
