@@ -11,6 +11,7 @@
 - API Addition: Added faceIndex paramter to #FreeTypeFontGenerator(FileHandle, int).
 - API Change: BitmapFont#getSpaceWidth changed to BitmapFont#getSpaceXadvance.
 - Many GlyphLayout fixes.
+- API Addition: Added FileHandle#map(), can be used to memory map a file
 
 [1.9.8]
 - Add iPhoneX images
